# nunchuk-emulator

nunchuk-emulator/: Cargo.toml  nunchuk-emulator.desktop  nunchuk.desktop
nunchuk-emulator/src/: backend.rs  i2c.rs  main.rs  vhu_i2c.rs
vhost-user-nunchuk/: Cargo.toml
vhost-user-nunchuk/src/: i2c.rs  main.rs
