[package]
name = "nunchuk-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
libc = "0.2.140"
log = "0.4.17"
once_cell = "1.17.1"
thiserror = "1.0.40"
vhost = { version = "0.6.0", features = ["vhost-user-slave"] }
vhost-user-backend = "0.8.0"
virtio-bindings = "0.2.0"
virtio-queue = "0.7.1"
vm-memory = "0.10.0"
vmm-sys-util = "0.11.1"
