[package]
name = "vhost-user-nunchuk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
libc = "0.2.140"
log = "0.4.17"
once_cell = "1.17.1"
tempfile = "3.5.0"
thiserror = "1.0.40"
vhost = { version = "0.6.0", features = ["vhost-user-slave"] }
vhost-user-backend = "0.8.0"
virtio-bindings = "0.2.0"
virtio-queue = "0.7.1"
vm-memory = "0.10.0"
vmm-sys-util = "0.11.1"
wayland-client = "0.30.1"
wayland-protocols = { version = "0.30.0", features = ["client"] }
